# cppnotes

./: .gitignore  LICENSE  README.md  SUMMARY.md  _sidebar.md  index.html
background/: paradigm.md  why_difficult.md
basic/: paradigm.md  pointer.md  why_cpp.md  why_difficult.md
basics/: paradigm.md  why_cpp.md
code/: CMakeLists.txt  EchoServerSelect.cpp.bak  EchoServerSyncBlocking.cpp  EchoServerSyncBlocking.cpp.bak  conanfile.txt  echo_server_blocking.cpp  file_aio.cpp  linux_aio.cpp  move_constructor.cpp  obj_model_inherit.cpp  obj_model_poly.cpp  promise_future.cpp  socket_client.cpp  socket_server_asio.cpp  socket_server_blocking.cpp  socket_server_select.cpp
code/singleton/: singleton.cpp  singleton.h
compile_link/: CMakeLists.txt  abi.md  cmake_cookbook.md  cpp_to_exe.md  elf.md  hello_world.cpp  hello_world.ii  hello_world.s  intern_static.md  relative_rpath_settings_with_cmake.html  why_cant_export_function_from_static_library.html
design_pattern/: exception.md  scope_guard.md
docs/: README.rst  conf.py  index.rst
internals/: Rvalue_Reference_Declarator.html  encapsulation.md  inheritance.md  lvalue_rvalue.md  model.md  point.cpp  polymorphism.md  template.md  types.md
introduction/: why_cpp.md  why_difficult.md
memory/: allocator.md  cpp_in_practice.pptx  exception_raii.md  memory_layout.md  memory_leak.md  memory_management.md  memory_mgt.md
model/: encapsulation.md  inheritance.md  introduction.md  model.tex
practice/: async_io.md  coroutine.md  exception.md  interview_questions.md  plugin_system.md  scope_guard.md  singleton.md  (+1 more)
(+79 files in other folders)
